    ```bash
    node cli.js download Phase1 Phase2
    ```
   **Breaking Change** The `backlogs` argument is optional, and when not provided in the command, all backlogs present in the configuration file are downloaded sequentially, a change from the old behavior of downloading the first configured backlog only.

## [0.2.0] - 2024-04-14

### Added

 - Work-item type overrides (icon, color, states, etc...)
    ```json
    workItems {
        type "User Story" {
            state "Review Internally" color="D800FF"
            state "Review with Customer" color="B10000"
            state "Ready" color="AEDDFF"
        }
    }
    ```
 - Work-item specific columns for the table of contents. **Note** The number of columns for all work item types must be the same!
    ```json
    value width="90px"  header="State" field="System.State"
    // For the story points, omit the field for Epic and Feature work items, so the column is empty
    value width="60px" header="Story Points" { workItems "Epic" "Feature"; }
    value width="60px" header="Story Points" field="Microsoft.VSTS.Scheduling.StoryPoints" align="right" { workItems "User Story" "Bug"; }
    value width="200px" header="Value Area" field="Microsoft.VSTS.Common.ValueArea"
    ```
 - Possibility to query the backlog by a WIQL expression (`backlog query="..."`), or by query name (`backlog query-name="..."`) in addition to the already existing query by id functionality (`backlog query-id="..."`)
 - Backlog views to allow the user to see predefined "slices" of the backlog. These should be defined inside the `backlog` tag.
    ```json
    view "Changed Since 08 Apr 2024" query=r#"
        [System.ChangedDate] >= '2024-04-08T00:00:00.0000000'
    "#
    view "Sprint 3 (Previous)" query=r#"
        [System.IterationPath] = @currentIteration('[Vandewiele]\Vandewiele Team <id:6ae09c99-d9f7-48c9-9c62-cc518e22f096>') - 1
    "#
    view "Sprint 4 (Current)" query=r#"